<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_daftar_aplikasi"
            android:icon="@drawable/ic_list"
            android:title="@string/nav_daftar_aplikasi" />
        <item
            android:id="@+id/nav_set_timer"
            android:icon="@drawable/ic_time"
            android:title="@string/nav_set_timer" />
        <item
            android:id="@+id/nav_materi"
            android:icon="@drawable/ic_content"
            android:title="@string/nav_materi" />
        <item
            android:id="@+id/nav_cara_pakai"
            android:icon="@drawable/ic_help"
            android:title="@string/nav_cara_pakai" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/nav_logout"/>
    </group>

</menu>
